objects/DM_Charge__c.object
<CustomObject>
    <fields>
        <fullName>DM_Accrue_Interest_From__c</fullName>
        <inlineHelpText>This is the date from which the interest on the charge will be calculated. If this is not mentioned interest will be calculated from the date the charge was incurred.</inlineHelpText>
        <label>DM_Accrue Interest From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>DM_Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Balance__c</fullName>
        <inlineHelpText>This field contains the principal balance on the loan after the charge has been applied.</inlineHelpText>
        <label>DM_Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM CL Contract</label>
        <referenceTo>DM_Loan_Account__c</referenceTo>
        <relationshipLabel>DM Charges</relationshipLabel>
        <relationshipName>DM_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Calculated_Interest3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>View only field which shows the calculated interest from last accrual date from SOD process.</description>
        <label>DM_Calculated Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Capitalization_Date__c</fullName>
        <description>Charge&apos;s Capitalization Date</description>
        <inlineHelpText>Charge&apos;s Capitalization Date</inlineHelpText>
        <label>DM_Capitalization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Charge_Type__c</fullName>
        <label>DM_Charge Type_deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Late Fees</fullName>
                </value>
                <value>
                    <fullName>DM_NSF Fees</fullName>
                </value>
                <value>
                    <fullName>DM_Wire Fees</fullName>
                </value>
                <value>
                    <fullName>DM_Pay-Off Fees</fullName>
                </value>
                <value>
                    <fullName>DM_Other</fullName>
                    <default>true</default>
                    <label>DM_Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_10__c</fullName>
        <label>DM Custom Field 7</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_1__c</fullName>
        <label>DM Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_2__c</fullName>
        <label>DM Custom Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Date__c</fullName>
        <inlineHelpText>This is the date the charge was incurred.</inlineHelpText>
        <label>DM_Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <label>DM External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Fee</label>
        <referenceTo>loan__Fee__c</referenceTo>
        <relationshipLabel>DM Charges</relationshipLabel>
        <relationshipName>DM_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Bearing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if the charge is interest bearing.</inlineHelpText>
        <label>DM_Interest Bearing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest due after a payment(txn amount insufficient to clear complete interest) on interest bearing charges</description>
        <label>DM_Interest Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate__c</fullName>
        <inlineHelpText>This is the interest rate to be applied on the charge (if applicable)</inlineHelpText>
        <label>DM_Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Internal_Accounting_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field indicates if accounting has been passed for the accrual entry record.</inlineHelpText>
        <label>DM_Internal Accounting Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Internal_Accounting_Rev_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM_Internal Accounting Rev Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Is_Charge_Capitalized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM_Charge Capitalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Is_Included_In_Due__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field should not be updated manually. System updates this field when charge is added to bill.</inlineHelpText>
        <label>DM_Is Included In Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Last_Accrual_Date__c</fullName>
        <description>Last accrual Date on charge (Usually the last payment transaction date)</description>
        <inlineHelpText>The date when the last interest accrual was processed</inlineHelpText>
        <label>DM_Last Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this is a master object record containing one or more child object records. Master object records may be archived but are not deleted by the system. This is automatically updated by the system. Do not update it manually.</inlineHelpText>
        <label>DM_Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Original_Amount__c</fullName>
        <inlineHelpText>The original amount of the charge.</inlineHelpText>
        <label>DM_Original Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Original_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DM_Original Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DM_Paid_Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>The amount that has been paid.</inlineHelpText>
        <label>DM_Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM_Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Payoff_Balance__c</fullName>
        <inlineHelpText>This field contains the balance needed to payoff the loan after this charge has been applied.</inlineHelpText>
        <label>DM_Payoff Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Principal_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Principal amount of charge that is yet to be paid.</description>
        <label>DM_Principal Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Reason_Waived__c</fullName>
        <label>DM_Reason Waived</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>DM_Non-Recoverable</fullName>
                </value>
                <value>
                    <fullName>DM_Bankruptcy - Active</fullName>
                </value>
                <value>
                    <fullName>DM_Bankruptcy - Discharged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Reference__c</fullName>
        <inlineHelpText>This text can be used to provide additional information about the charge.</inlineHelpText>
        <label>DM_Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DM_Summary_Record_Id__c</fullName>
        <inlineHelpText>The ID of the summary transaction record within which this record is summarized. This is automatically generated by the system. Do no update it manually.</inlineHelpText>
        <label>DM_Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that the record is a summary transaction record for data archival purpose. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>DM_Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Tax_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DM_Tax Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DM_Tax_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DM_Tax Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DM_Total_Amount_Due__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Replacement for formula field</description>
        <label>DM_Total Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DM_Total_Due_Amount__c</fullName>
        <formula>DM_Principal_Due__c + DM_Interest_Due__c + DM_Calculated_Interest3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DM_Total Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Total_Waived_Amount__c</fullName>
        <formula>DM_Waived_Principal__c +  DM_Waived_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DM_Total Waived Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Waive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag is set when the charge is fully waived.</inlineHelpText>
        <label>DM_Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Waived_Interest__c</fullName>
        <label>DM_Waived Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Waived_Principal__c</fullName>
        <label>DM_Waived Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_payment_Amount__c</fullName>
        <label>DM payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>DM Charge</label>
    <nameField>
        <label>DM Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>